--- a/style.css
+++ b/style.css
@@ -184,6 +184,8 @@ body {
     background-color: #4d4d4d;
     padding: 2px;
     border-radius: 2px;
+    font-size: 14px;
+    font-family: 'Consolas';
 }
 .content .comment {
     color: #757575;
