--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
     padding: 0;
     box-sizing: border-box;
 }
-
 body {
     font-family: 'Times New Roman', Times, serif;
     line-height: 1.6;
@@ -12,7 +11,6 @@ body {
     background-color: #181818; 
     color: #f0f0f0;
 }
-
 .container {
     display: flex;
     width: 100%;
@@ -26,6 +24,10 @@ body {
     overflow-y: auto;
     padding: 2rem 1rem;
     transition: width 0.3s ease;
+}
+.sidebar-small-list {
+    font-size: smaller;
+    margin-left: 15px;
 }
 
 @media (min-width: 768px) { 
@@ -239,18 +241,23 @@ body {
 .sidebar.collapsed .sidebar-header:not(:first-child) {
     display: none;
 }
-h7 {
+.h7 {
     font-weight: bold;
     font-size: 18px;
 }
-h8 {
+.h8 {
     font-weight: 900;
     font-size: 25px;
 }
 .content ul {
     margin-left: 25px;
 }
-h9 {
+.h9 {
     font-weight: 800;
     font-size: 23px;
+}
+a{
+    color: #00ff04;
+    font-weight: bold;
+    text-decoration: none;
 }
