--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     line-height: 1.6;
     display: flex;
     min-height: 100vh;
-    background-color: #181818; 
+    background-color: #101720; 
     color: #f0f0f0;
 }
 .container {
@@ -16,7 +16,7 @@ body {
     width: 100%;
 }
 .sidebar {
-    background: #282828;
+    background: #404040;
     color: #fff;
     width: 250px;
     height: 100%;
@@ -52,7 +52,6 @@ body {
     }
 }
 
-/* Sidebar Styles for Mobile */
 @media (max-width: 768px) {
     .sidebar {
         position: fixed;
@@ -61,23 +60,22 @@ body {
         overflow: hidden; 
         background: #282828;
         transition: height 0.3s ease; 
-        z-index: 100; /* Add a z-index for visibility */
+        z-index: 100;
     }
 
     .sidebar.active {
         height: 100%;
-        width: 100%; /* Make the sidebar full width when active */
+        width: 100%;
     }
 
     .content {
-        padding-bottom: 50px; /* Tạo khoảng trống cho nút 3 sọc */
+        padding-bottom: 50px;
     }
 
     .toggle-btn { 
         display: block; 
     }
 
-    /* Collapse Styles for Smaller Screens */
     .sidebar.collapsed {
         width: 50px;
         overflow-x: hidden;
@@ -88,11 +86,10 @@ body {
         margin-left: 50px; 
     }
     .content.active {
-        margin-left: 100%; /* Move content to the right */
+        margin-left: 100%;
         transition: margin-left 0.3s ease; 
     }
 }
-/* Other Styles */
 
 .sidebar .toggle-btn {
     background: none;
@@ -135,12 +132,12 @@ body {
     text-decoration: none;
     padding: 0.5rem 1rem;
     display: block;
-    border-radius: 5px; /* Bo tròn góc cho link */
+    border-radius: 5px;
     transition: background 0.3s ease;
 }
 
 .sidebar ul li a:hover {
-    background: #383838; /* Màu nền khi hover */
+    background: #383838;
 }
 
 .sidebar.collapsed .sidebar-list {
@@ -262,7 +259,7 @@ a{
     text-decoration: none;
 }
 table,th,td{
-    border: 1px solid #fff261;
+    border: 3px solid #fff261;
     border-collapse: collapse
 }
 th,td{
