--- a/style.css
+++ b/style.css
@@ -182,10 +182,7 @@ body {
 .content x {
     background-color: #4d4d4d;
     padding: 2px;
-    border-radius: 2px;
-    font-size: 14px;
-    font-family: 'Consolas';
-}
+    border-radius: 2px 
 .content .comment {
     color: #757575;
     position: relative;
