--- a/style.css
+++ b/style.css
@@ -183,6 +183,7 @@ body {
     background-color: #4d4d4d;
     padding: 2px;
     border-radius: 2px 
+}
 .content .comment {
     color: #757575;
     position: relative;
