--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   line-height: 1.6;
   /* Remove display: flex */
   min-height: 100vh;
-  background-color: #101720;
+  background-color: #1d232c;
   color: #f0f0f0;
 }
 
