--- a/css/style.css
+++ b/css/style.css
@@ -332,7 +332,7 @@ color: #fff;
 font-size: 15px;
 font-weight: bold;
 transition: all 0.4s ease;
-padding-left: 20px;
+padding-left: 10px;
 padding-top: 10px;
 padding-bottom: 10px;
 }
@@ -344,9 +344,8 @@ display: none;
 }
 
 .sidebar .nav-list li .sub-menu {
-padding: 6px 6px 14px 80px;
+padding: 6px 6px 14px 30px;
 margin-top: -10px;
-background: #1d1b31;
 display: none;
 transition: all 0.3s ease;
 }
@@ -378,6 +377,7 @@ transition: all 0.4s ease;
 .sidebar .nav-list li .sub-menu {
   max-height: 200px; /* Adjust this value as needed */
   overflow-y: auto; /* Enable vertical scrolling if content exceeds max-height */
+  overflow-x: hidden;
 }
 
 .sidebar .nav-list li .sub-menu a {
